# internet_connection

./: .gitignore  CMakeLists.txt  README.md
src/: ConnectivityChecker.cpp  ConnectivityChecker.h  MainWindow.cpp  MainWindow.h  NetworkTrafficMonitor.cpp  NetworkTrafficMonitor.h
